修改文件: 日程安排.md

--- a/日程安排.md
+++ b/日程安排.md
@@ -613,6 +613,6 @@ rcnn， fast rcnn ，faster rcnn  三个可能要看个2个以上，
 6. 早睡
 
 ### 2018年09月11日
-今天上午中午都没有克制住，以极其地下的效率在工作
+今天上午中午都没有克制住，以极其地下的效率在工作，日复一日，毫无改变，吃屎去啊。要凶要狠，要意志坚定，一定要做到。
 
 
