修改文件: 数据结构.md

--- a/数据结构.md
+++ b/数据结构.md
@@ -1,5 +1,5 @@
 ---
-title: 数据结构
+title: 搜索树
 tags: 新建,模板,小书匠
 grammar_cjkRuby: true
 grammar_mermaid: true
@@ -151,7 +151,9 @@ def delete(T,z):
 
 ### 最小不平衡子树旋转
 
-![四种特殊情况](./images/1532352244538.jpg)
+
+![四种情况](https://hosbimkimg.oss-cn-beijing.aliyuncs.com/pic/1536733852691.png)
+
 注意着只是四种特殊情况，
 
 ``` cpp
