修改文件: 日课.md

--- a/日课.md
+++ b/日课.md
@@ -19,6 +19,10 @@ grammar_cjkRuby: true
 为了提高时间的利用效率，现在每做一件事情，都花时间记录下来
 timelog
 
+总结思考提高，未来的那些压力现在想也没有用，怎么想都没有办法面对，只能是活好当下，做好每一件事情。
+
+另外就是真的去面对自己，去总结自己，以后每天晚上走之前都要好好的思考一番，晚上早点上床，睡觉前也好好总结反思一下。
+
 ### 2018年09月13日
 
 14:46:56
@@ -41,6 +45,9 @@ rfc  7332
 18:58:13
 图的一般算法  图的深度搜索和广度搜索
 20:11:27
+
+### 2018年09月17日
+09:49:29
 
 
 
