修改文件: 日课.md

--- a/日课.md
+++ b/日课.md
@@ -48,8 +48,22 @@ rfc  7332
 
 ### 2018年09月17日
 09:49:29
+tu层对话内消息的处理
+09:53:08
+
+| 开始时间    |  结束时间    |  任务     |
+| --- | --- | --- |
+|     09:54:35 |  11:54:35   | 下发请求到TU     |
+
+|      |    |      |
+|      |    |      |
+|      |    |      |
+|      |    |      |
+|      |    |      |
+|      |    |      |
 
 
+对上午进行一下总结，很多东西其实只是习惯的影响，只是我自己再舒适区待习惯了，形成了一个顾性，导致难以改变，但是真的去做的时候其实没那么难，对于我而言最困难只是一个开始，所以以后累了就眯一下眼，休息一下，手机只能够拿来看pdf和学习资料，然后小说就只有晚上健身的时候看一会，其他时间不看。提醒一下自己。
 
 
 
