修改文件: 日课.md

--- a/日课.md
+++ b/日课.md
@@ -67,4 +67,18 @@ tu层对话内消息的处理
 
 
 
+晚上走之前在进行一次总结吧，先说一下工作量
+**下午**
+1. 找到关联腿
+**晚上**
+1. AVL的插入和删除，才几行的代码
+2. 红黑树，入了个门
+
+很恐怖，这多的时间只做了这么一点点的事情。
+要改进的几点
+1. 还是老问题上班不能看手机，一下都不能看
+2. 休闲或者路上的时候看手机回顾一下以前学过的知识，进一步思考和总结
+3. 就是自信和热爱，不管是什么新知识，都要带着自信和热爱去学习，不要磨磨唧唧的花半天下定决心才开始，很多东西其实就几句话特别简单。
+
+
 
