修改文件: 日课.md

--- a/日课.md
+++ b/日课.md
@@ -81,4 +81,15 @@ tu层对话内消息的处理
 3. 就是自信和热爱，不管是什么新知识，都要带着自信和热爱去学习，不要磨磨唧唧的花半天下定决心才开始，很多东西其实就几句话特别简单。
 
 
+一会晚上健身的时候看一下adma算法
+
+### 2018年09月18日
+今天的任务
+1. 改完代码
+2. 写完详细设计
+3. 红黑树 b- 树，二项堆
+
+
+我是一个没得感情的傻逼，
+
 
