修改文件: 日课.md

--- a/日课.md
+++ b/日课.md
@@ -23,6 +23,8 @@ timelog
 
 另外就是真的去面对自己，去总结自己，以后每天晚上走之前都要好好的思考一番，晚上早点上床，睡觉前也好好总结反思一下。
 
+做事情讲究的就是一鼓作气，一下子直接做完，不要老是自己打断自己。
+
 ### 2018年09月13日
 
 14:46:56
@@ -90,6 +92,12 @@ tu层对话内消息的处理
 3. 红黑树 b- 树，二项堆
 
 
-我是一个没得感情的傻逼，
+
+### 2018年09月25日
+1. 详细设计文档
+2. 红黑树的删除，以及b-树
+3. ACK问题解决
+4. 链路存储，读取
+5. git后续还需要重新学习一下
 
 
