--- a/待办事项.md
+++ b/待办事项.md
@@ -7,7 +7,7 @@ grammar_cjkRuby: true
 ## 工作内容
 
 - [ ] 链路配置文件读取
-- [x] 日志级别修改以及意义
+- [x] 日志级别修改以及意义     要问
 - [x] 消息重发以及接收到重发的消息
 
 
@@ -15,9 +15,9 @@ grammar_cjkRuby: true
 好大一堆
 
 
-## C语言
+## 自学内容
 - [X] CCAN
 - [] 红黑树和b-树
 - [] 二项堆
-
+- [] git后续还需要重新学习一下
 ## 生活
