修改文件: 待办事项.md

--- a/待办事项.md
+++ b/待办事项.md
@@ -7,7 +7,7 @@ grammar_cjkRuby: true
 ## 工作内容
 
 - [ ] 链路配置文件读取
-- [x] 日志级别修改以及意义     要问读取到意义
+- [x] 日志级别修改以及意义     要问读取到意义还有我改了4了为何还是没有打印
 - [x] 消息重发以及接收到重发的消息
 
 
