修改文件: 待办事项.md

--- a/待办事项.md
+++ b/待办事项.md
@@ -25,7 +25,7 @@ grammar_cjkRuby: true
 
 
 ## 急需
-1. 日志级别的参数】。
+1. 日志级别的参数】。    改了tracelog中loglevel=4但是却没有看到debug日志，要问啊
 2. 链路号，的读取。
 3. ack问题。
-4. 文档提交
+4. 文档提交。
