修改文件: 待办事项.md

--- a/待办事项.md
+++ b/待办事项.md
@@ -7,20 +7,21 @@ grammar_cjkRuby: true
 ## 工作内容
 
 - [ ] 链路配置文件读取
-- [x] 日志级别修改以及意义     要问读取到意义还有我改了4了为何还是没有打印
-- [x] 消息重发以及接收到重发的消息
-
+- [ ] 日志级别修改以及意义     要问读取到意义还有我改了4了为何还是没有打印
+- [ ] 消息重发以及接收到重发的消息
+- [] 文姐邮件给的抓包信息
 
 ## 深度学习
 好大一堆
 
 
 ## 自学内容
-- [X] CCAN
-- [] 红黑树和b-树
+- [ ] CCAN
+- [ ] 红黑树和b-树
 - [] 二项堆
 - [] git后续还需要重新学习一下
 - [] C语言的编译
+- [] 优先队列
 ## 生活
 
 
