修改文件: 待办事项.md

--- a/待办事项.md
+++ b/待办事项.md
@@ -10,6 +10,13 @@ grammar_cjkRuby: true
 - [ ] 日志级别修改以及意义     要问读取到意义还有我改了4了为何还是没有打印
 - [ ] 消息重发以及接收到重发的消息
 - [] 文姐邮件给的抓包信息
+- [] sip消息来了存在哪一块内存，解码的时候不需要copy，根据内存的位置判断，消息是否需要copy
+
+``` javascript
+SIP_UDP_TO_TRANS    这个查看一下
+```
+
+
 
 ## 深度学习
 好大一堆
