修改文件: 待办事项.md

--- a/待办事项.md
+++ b/待办事项.md
@@ -6,15 +6,22 @@ grammar_cjkRuby: true
 
 ## 工作内容
 
-- [ ] 链路配置文件读取
+- [x] 链路配置文件读取  zxin_sip
 - [ ] 日志级别修改以及意义     要问读取到意义还有我改了4了为何还是没有打印
 - [ ] 消息重发以及接收到重发的消息
 - [] 文姐邮件给的抓包信息
 - [] sip消息来了存在哪一块内存，解码的时候不需要copy，根据内存的位置判断，消息是否需要copy
 
+下发消息时的链路选择 以及via中数据的填写
+
+
+route和record-route 的选择
+
 ``` javascript
 SIP_UDP_TO_TRANS    这个查看一下
 ```
+
+215 安装sipp
 
 
 
