修改文件: 待办事项.md

--- a/待办事项.md
+++ b/待办事项.md
@@ -31,18 +31,15 @@ grammar_center: true
 grammar_align: true
 grammar_tableExtra: true
 --- 
-- [ ] 
-- [ ] - [x] CCAN
-- [ ] 红黑树和b-树
-- [] 二项堆
-- [] git后续还需要重新学习一下
-- [] C语言的编译
-- [] 优先队列
 
-文件读取
 
-socket 编程  udp不断的读取消息
-
-进程线程通信
-
-定时器
+- [x] CCAN
+- [x] 红黑树和b-树
+- [x] 二项堆
+- [x] git后续还需要重新学习一下
+- [x] C语言的编译
+- [x] 优先队列
+- [x] socket 编程  udp不断的读取消息
+- [x] 进程线程通信
+- [x] 定时器
+- [x] makefile
