修改文件: 日课.md

--- a/日课.md
+++ b/日课.md
@@ -110,4 +110,17 @@ tu层对话内消息的处理
 
 ### 2018年09月29日
 
-记住这种感觉，兴奋，激动，战斗，不服气，和别人赛跑，这才是我
+记住这种感觉，兴奋，激动，战斗，不服气，和别人赛跑，这才是我要的生活态度
+
+### 2018年09月30日
+
+绝对绝对不能够再继续这样下去了，我必须一定要成为要想要成为的人。
+我要定长期计划和短期计划，而且每个计划都要无比认真的执行
+
+每次吃饭之前志气满满，规划好了中午和下午的任务，吃完饭后看个小说，刷一下微博，直接就凉了就懒散下来了，想着下次再做。要狠啊，要提醒自己
+
+今天下午的任务
+
+1. 认真的学习一下会话刷新
+2. 完成min-se的任务 ，确定好怎么改（去讨论，把方案确定下来）
+
