修改文件: 日课.md

--- a/日课.md
+++ b/日课.md
@@ -124,3 +124,17 @@ tu层对话内消息的处理
 1. 认真的学习一下会话刷新
 2. 完成min-se的任务 ，确定好怎么改（去讨论，把方案确定下来）
 
+
+### 国庆7天的任务
+
+主要的目标就是重新找回自信
+
+这7天什么都不管，就是学习学习再学习
+
+ppt 加上一些数据结构一天
+
+c语言的多线程多进程一天
+
+剩下的就是把课程学习完
+
+
