修改文件: 优先队列(堆).md

--- a/优先队列(堆).md
+++ b/优先队列(堆).md
@@ -56,14 +56,64 @@ grammar_cjkRuby: true
 
 ![实例](https://hosbimkimg.oss-cn-beijing.aliyuncs.com/pic/1538547716541.png)
 
-堆排序的基本思想是：
-1. 将待排序序列构造成一个大顶堆，
-2. 整个序列的最大值就是堆顶的根节点。将其与末尾元素进行交换，此时末尾就为最大值。然后将剩余n-1个元素重新构造成一个堆，这样会得到n个元素的次小值。如此反复执行，便能得到一个有序序列了
+算法思想(以大顶堆为例)：
+1.将长度为n的待排序的数组进行堆有序化构造成一个大顶堆
+ 
+2.将根节点与尾节点交换并输出此时的尾节点
+ 
+3.将剩余的n -1个节点重新进行堆有序化
+ 
+4.重复步骤2，步骤3直至构造成一个有序序列
 
-这里面关键的就是如何构建二项堆，如果使用插入则会浪费一部分空间，可以不使用额外的空间，直接对其进行调整得到堆结构
+假设待排序数组为[20,50,10,30,70,20,80]
+
+**构造堆**
+构造堆，反序遍历所有非叶子节点X，调整节点X和其子节点，使其满足最大堆
+
+以[20,50,10,30,70,20,80] 初始状态
+
+![初始状态](https://hosbimkimg.oss-cn-beijing.aliyuncs.com/pic/1538550024125.png)
 
 
+第一次for循环将节点3和它的子节点7 8的元素进行比较，最大者作为父节点（即元素60作为父节点）
+【红色表示交换后的状态】
 
+![第一次循环](https://hosbimkimg.oss-cn-beijing.aliyuncs.com/pic/1538550059419.png)
+
+第二次for循环将节点2和它的子节点5 6的元素进行比较，最大者为父节点（元素80作为父节点）
+
+![第二次循环](https://hosbimkimg.oss-cn-beijing.aliyuncs.com/pic/1538550084174.png)
+
+第三次for循环将节点1和它的子节点3 4的元素进行比较，最大者为父节点（元素70作为父节点）
+
+![第三次循环](https://hosbimkimg.oss-cn-beijing.aliyuncs.com/pic/1538550102279.png)
+
+
+第四次for循环将节点0和它的子节点1 2的元素进行比较，最大者为父节点（元素80作为父节点）
+
+![第四次循环](https://hosbimkimg.oss-cn-beijing.aliyuncs.com/pic/1538550119381.png)
+
+至此有序堆已经构造好了！如下图：
+
+![大顶堆](https://hosbimkimg.oss-cn-beijing.aliyuncs.com/pic/1538550138475.png)
+
+**排序过程**
+
+（1）堆顶元素80和尾40交换后-->调整堆
+
+![找到最大元素](https://hosbimkimg.oss-cn-beijing.aliyuncs.com/pic/1538550182531.png)
+
+（2）堆顶元素70和尾30交换后-->调整堆
+
+![](https://hosbimkimg.oss-cn-beijing.aliyuncs.com/pic/1538550211583.png)
+
+堆顶元素60尾元素20交换后-->调整堆
+
+![](https://hosbimkimg.oss-cn-beijing.aliyuncs.com/pic/1538550223666.png)
+
+（4）其他依次类推，最终已排好序的元素如下：
+
+![](https://hosbimkimg.oss-cn-beijing.aliyuncs.com/pic/1538550241022.png)
 
 ## Referen
 
