修改文件: 日课.md

--- a/日课.md
+++ b/日课.md
@@ -27,7 +27,12 @@ timelog
 
 习惯的养成，很多时候人的推进就是习惯的作用，坚持一些号的习惯
 
-现在要进入死磕的阶段，
+现在要进入死磕的阶段
+
+重新开始永远都不会晚，怕的就是你再也没有了勇气和自信
+
+任何东西学习完了写文档总结思考一下
+
 ### 2018年09月13日
 
 14:46:56
@@ -124,3 +129,9 @@ tu层对话内消息的处理
 1. 认真的学习一下会话刷新
 2. 完成min-se的任务 ，确定好怎么改（去讨论，把方案确定下来）
 
+### 2018年10月08日
+
+今天的任务， 
+min-se确定好方案
+转正答辩ppt
+上周的问题
