修改文件: 代办事项.md

--- a/代办事项.md
+++ b/代办事项.md
@@ -38,11 +38,14 @@ grammar_tableExtra: true
 - [x] 二项堆
 - [x] git后续还需要重新学习一下
 - [x] C语言的编译
-- [x] 优先队列
+- [x] 优先队列     已完成
 - [x] socket 编程  udp不断的读取消息
 - [x] 进程线程通信
 - [x] 定时器
 - [x] makefile
+- [x] linux下GDB
+- [x] 找一个以前的core看看
+- [x] zxinos Asend
 
 
 ## deeplearn
@@ -53,45 +56,3 @@ grammar_tableExtra: true
 
 
 
-## 国庆7天
-
-
-这7天是我重新建立起自信的大好时机，没事情的话每天安排16个小时的学习时间，其他的时间是睡觉和吃饭
-
-首先这7天全部都会用来学习
-
-运动3次
-
-每顿饭自己做，炒个青菜煮个饭很快
-
-
-另外要完成的任务如下
-1. ppt做完
-2. 优先队列和剩下的一些数据结构学习完，这个地方要输出两个博客
-3. 算法，看一两个经典的算法，同样要输出两个博客
-4. 另外整理一下图的几个算法发到博客
-
-前面这些，周一一天，加上晚上的加班应该够了
-
-1. C语言的线程进程通信
-2. 定时器
-
-周二一天，加上不确定的半天
-
-
-
-
-1. 整理微专业的第二课笔记和作业
-
-花费时间最多1.5天   3,4
-
-1. yolo算法论文
-2. 实现
-
-这里论文先看yolo1，看翻译就行了
-顺便学习一下tensorflow
-
-时间大概1天
-
-
-剩下最后两天，把课程剩下的任务完成
