修改文件: 日课.md

--- a/日课.md
+++ b/日课.md
@@ -132,6 +132,23 @@ tu层对话内消息的处理
 ### 2018年10月08日
 
 今天的任务， 
-min-se确定好方案
+
 转正答辩ppt
 上周的问题
+
+记一句话
+
+``` 
+为什么要行走江湖呢，不只是去追逐那些美好的风景，不只是练拳习武让自己变得更加强大，还有多见见比自己更好的江湖人。只是看到了更好的人也不能白看，一定要高山仰止，虽不能至，心神往之。
+```
+### 2018年10月10日
+最近几年的学习态度确实是有问题的，浮躁，急于求成，放纵自己，等等。
+
+我现在的状态时不仅仅心气上要回到过去，学习方法，心态也要回归，给自己提出几点要求。要真的去做回自己
+
+``` 
+1. 每天日记及时反思和总结，每天睡前都要自省
+2. 遇到任何不懂的问题都仔细的记下来，如果时间不够的话就下次记下来。
+3. 加强行动力，想到什么就赶紧去做，不要拖拖拉拉。
+4. 少玩手机或者不玩手机多思考。
+```
