修改文件: 代办事项.md

--- a/代办事项.md
+++ b/代办事项.md
@@ -48,7 +48,8 @@ grammar_tableExtra: true
 - [x] zxinos Asend
 - [ ] 安装自测环境
 - [ ] C语言 int 常量 string 常量 数据存放 还有python
-
+- [ ] bproxytoproxy
+- [ ] 数据区的申请
 
 
 
