修改文件: 日课.md

--- a/日课.md
+++ b/日课.md
@@ -162,7 +162,18 @@ tu层对话内消息的处理
 ### 2018年10月11日
 
 今天的任务
-1. 改好，编译通过并且交给朱正
-2. 装机
-3. 杨松
-4. 总结文档。
+1. 改好，编译通过并且交给朱正 完成
+2. 装机 没有完成
+3. 杨松   完成
+4. 总结文档。 至少一个   没有完成
+
+效率还是低啊
+
+
+### 2018年10月12日
+1. 王琪
+2. 另外一个支持
+3. 重发和定时器的总结
+4. 健身
+5. 回去问问题
+
