--- a/日课.md
+++ b/日课.md
@@ -182,3 +182,14 @@ tu层对话内消息的处理
 2. 昨天的支持
 3. 总结TA层和trans层的定时器
 
+下午三个事情
+1. contact
+2. 编译
+
+### 2018年10月15日
+今天空闲时间多啊总结好三个事情
+
+1. 扩展
+2. makefile编译
+3. tcp，udp简单的理解和网络编程
+
