修改文件: 日课.md

--- a/日课.md
+++ b/日课.md
@@ -197,3 +197,11 @@ tu层对话内消息的处理
 
 ### 2018年10月16日
 热爱生活拥抱变化，做好自己
+
+1. min-se
+2. option 链路检测
+3. allow
+4. makefile
+5. gun debug
+
+主要任务是前面的三个，后面的几个再说
